# evalforge

./: .env.example  .gitignore  Dockerfile  EVALGATE_ARCHITECTURE.md  README.md  RESUME_BULLETS.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: release-gate-ci.yml
alembic/: env.py
alembic/versions/: 20260301_0001_initial_schema.py  20260302_0002_add_eval_jobs.py  20260304_0003_evalgate_release_gates.py  20260304_0004_golden_case_scenarios.py  20260304_0005_experiment_registry.py  20260304_0006_release_gate_experiments.py  20260304_0007_evaluator_registry.py  20260305_0008_model_routing_registry.py
app/: main.py
app/api/: router.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/engine/: evaluator.py  evaluator_registry.py  judge.py
app/models/: assets.py  dataset.py  eval_run.py  evaluator_definition.py  experiment.py  model_routing.py  telemetry.py
app/services/: asset_service.py  dataset_service.py  eval_service.py  experiment_service.py  (+4 more)
dashboard/: app.py  client.py
docs/: ARCHITECTURE_DIAGRAM.md  DEMO.md  DEPLOYMENT_HARDENING.md  EVALGATE_ROADMAP.md  METRICS_SUMMARY_TEMPLATE.md  RECRUITER_DEMO_WALKTHROUGH.md
tests/: test_asset_metadata.py  test_auth_roles.py  test_auth_workspace.py  test_eval_calibration.py  test_eval_jobs.py  test_evaluator_registry.py  test_experiments.py  test_groundedness_validation.py  test_health.py  test_model_routing.py  test_release_gate_ci_script.py  test_release_gates.py  test_structured_output_validation.py  test_telemetry_rollups.py
training/: train_quality_model.py
(+16 files in other folders)
