[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalforge"
version = "0.1.0"
description = "LLM Reliability and PromptOps platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "structlog>=24.4.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "streamlit>=1.43.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
ml = [
  "scikit-learn>=1.5.0",
  "numpy>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "training*"]

[tool.ruff]
line-length = 100
target-version = "py39"
